--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ header{
 
 #global{
 	width: 80%;
+	height: 87%;
 	margin: 0px auto;
 	margin-top: 110px;
 	box-shadow: 0px 0px 2px gray;
@@ -91,7 +92,8 @@ a:hover {
 .slider-frame{
 	width: auto;
 	height: auto;
-	margin: 80px auto 0;
+
+	margin: 100px auto;
 	overflow: hidden;
 
 	
@@ -100,7 +102,7 @@ a:hover {
 .slider-frame ul{
 	display: flex;
 	padding: 0;
-	margin: 30px;
+	margin: 38px;
 	width: 400%;
 
 	animation: slide 15s infinite;
@@ -131,6 +133,7 @@ a:hover {
 }
 
 #imagen{
+	margin: 0 auto;
 	width: 1300px;
 	height: 1300px;
 }
@@ -143,4 +146,3 @@ a:hover {
  	left: 30px;
 
  }
-
