--- a/css/style.css
+++ b/css/style.css
@@ -1,121 +1,9 @@
-*{
-	margin: 0px;
-	padding: 0px;
-	font-family: Helvetica;
-
-}
-
-body{
-	background: url('../img/fondo.jpg');
-	background-attachment: fixed;
-	overflow: hidden;
-	/*margin-bottom: 1000px;*/
-
-}
-
-header{
-	background: rgba(0, 0, 0, 9);
-	width: 100%;
-	top: 0;
-	position: fixed;
-	z-index: 1000;
-	opacity: 0.98;
-}
-
-#global{
-	width: 80%;
-	height: 87%;
-	margin: 0px auto;
-	margin-top: 110px;
-	box-shadow: 0px 0px 2px gray;
-	background: #FF9458;
-}
-
-
-nav{
-	/*outline: 1px solid yellow;*/
-}
-
-nav ul{
-	list-style: none;
-	overflow: hidden;
-}
-
-
-ul{
-	/*outline: 1px solid blue;*/
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	/*text-align: center;*/
-	background-color: #525252;
-	line-height: 100px;
-
-}
-
-li{
-	/*outline: 1px solid red;*/
-	width: 200px;
-	display: inline-block;
-
-
-}
-
-
-
-p{
-	margin-bottom: 20px;
-}
-
-
-
-a{
-	/*outline: 1px solid yellow;*/
-	font-size: 17px;
-	text-decoration: none;
-	color: #fff;
-	padding: 10px auto;
-	display: flex;
-	justify-content: center;
-	white-space: pre;
-	left: 100px;
-}
-
-a:hover {
-	background: #f9a91a;
-	color: #000;
-}
-
-
-
-
-.slider-frame{
-	width: auto;
-	height: auto;
-
-	margin: 100px auto;
-	overflow: hidden;
-
-	
-}
-
-.slider-frame ul{
-	display: flex;
-	padding: 0;
-	margin: 38px;
-	width: 400%;
-
-	animation: slide 15s infinite;
-}
-
-.slider-frame li{
-	list-style: none;
-	width: 160%;
-}
-
-.slider-frame img{
-	width: 100%;
-
+@font-face {
+	/*Establezco una nueva fuente*/
+    font-family: 'Netflix Sans-normal';
+    font-weight: 400;
+    font-display: optional;
+    src: url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff2) format('woff2'),url(https://assets.nflxext.com/ffe/siteui/fonts/netflix-sans/v3/NetflixSans_W_Rg.woff) format('woff');
 }
 
 @keyframes slide {
@@ -132,17 +20,100 @@ a:hover {
 	95% {margin-left: -300%}
 }
 
-#imagen{
-	margin: 0 auto;
-	width: 1300px;
-	height: 1300px;
+
+
+
+
+/*-------------Index-------------*/
+
+html, body{
+	background: url('../img/fondo.jpg');
+	background-attachment: fixed;
+	overflow: hidden;
+	margin: 0px;
+	padding: 0px;
+	font-family: 'Netflix Sans-normal';
 }
 
- #imghome{
- 	position: absolute;
- 	height: 100px;
- 	width: 120px;
- 	top: 0px;
- 	left: 30px;
+header{
+	width: 100%;
+	position: fixed;
+}
 
- }
+#imghome{
+	height: 100px;
+	width: 120px;
+}
+
+#menu-nav-bar{
+	list-style: none;
+	display: flex;
+	color: #FFFFFF;
+	background-color:   #3e3e3e;
+	text-align: center;
+	overflow: auto;
+	white-space: nowrap;
+}
+
+.menu-nav-bar-item{
+	font-size: 15px;
+	width: 30%;
+	display: inline-block;
+	height: 
+}
+
+.link-style-menu{
+	display: block;
+	color: #FFFFFF;
+	text-decoration: none;
+}
+
+.link-style-menu:hover {
+	color: #FFFFFF;
+	background-color: #2e2e2e;
+}
+
+#section-index{
+	width: 80%;
+	margin: 0px auto;
+	margin-top: 110px;
+	box-shadow: 0px 0px 2px gray;
+	background: #FF9458;
+}
+
+
+
+
+
+/*-------------JQuery-------------*/
+
+.slider-frame{
+	width: auto;
+	height: auto;
+	margin: 80px auto 0;
+	overflow: hidden;
+
+	
+}
+
+.slider-frame ul{
+	display: flex;
+	padding: 0;
+	margin: 30px;
+	width: 400%;
+
+	animation: slide 15s infinite;
+}
+
+.slider-frame li{
+	list-style: none;
+	width: 160%;
+}
+
+.slider-frame img{
+	width: 100%;
+
+}
+
+
+
