Se agregaron los archivos para cambiar el estado de los botones de logueo, se agrego el cerrar sesion, se modificaron los html agregando el nuevo boton de cerrar sesion y se agregaron clases e id que fueron modificados en el archivo css

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ header{
 .link-style-menu{
 	color: #FFFFFF;
 	text-decoration: none;
+	display: flex;
 	text-align: center;
 	padding: 14px 16px;
 }
@@ -224,4 +225,6 @@ header{
 	color: #DF0101;
 }
 
-
+.stateLogOut{
+	display: none;
+}
