Cambios menores y registrar-perro.html añadido.

--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ header{
 	margin-top: 200px;
 }
 
-.sign-in-and-sign-up-label{
+.form-label{
 	color: #3d3d3d;
     font-size: 30px;
     font-family: 'Netflix Sans-bold';
